--- a/theory/theory.tex
+++ b/theory/theory.tex
@@ -112,4 +112,15 @@
     \end{definition}
 
     Polynomial functors preserve colimits
+
+    \begin{example}
+        The terminal object for \(p\)-Coalgebras is 
+        \[ \sum_{i \in \Gamma} C_i\]
+    \end{example}
+    \begin{proof}
+        The map takes any \(p\)-Coalgebra \((X, \alpha: X\to pX)\) to the one above.
+        
+        If \(x : X\) is mapped to \(()\) by \(\alpha\), this gets mapped to \(
+    \end{proof}
+        
 \end{document}
